translation-tool/inputs/source_meta/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>B2C General Case</fullName>
        <description>Support process having all Status values for Consumer cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Associate</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to Regulator</fullName>
        </values>
        <values>
            <fullName>Open - Acknowledge</fullName>
        </values>
        <values>
            <fullName>Open - De-escalate</fullName>
        </values>
        <values>
            <fullName>Open - Dispatch</fullName>
        </values>
        <values>
            <fullName>Open - Escalate</fullName>
        </values>
        <values>
            <fullName>Open - Troubleshooting</fullName>
        </values>
        <values>
            <fullName>Operator Analysis</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Operator Analysis - Escalated</fullName>
        </values>
        <values>
            <fullName>Pending - Callback</fullName>
        </values>
        <values>
            <fullName>Pending Confirmation</fullName>
        </values>
        <values>
            <fullName>Pending Customer Input</fullName>
        </values>
        <values>
            <fullName>Redirected to Third Party</fullName>
        </values>
    </businessProcesses>
	<businessProcesses>
        <fullName>B2B General Case</fullName>
        <description>Support process having all Status values for Consumer cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Associate</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated to Regulator</fullName>
        </values>
        <values>
            <fullName>Open - Acknowledge</fullName>
        </values>
        <values>
            <fullName>Open - De-escalate</fullName>
        </values>
        <values>
            <fullName>Open - Dispatch</fullName>
        </values>
        <values>
            <fullName>Open - Escalate</fullName>
        </values>
        <values>
            <fullName>Open - Troubleshooting</fullName>
        </values>
        <values>
            <fullName>Operator Analysis</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Operator Analysis - Escalated</fullName>
        </values>
        <values>
            <fullName>Pending - Callback</fullName>
        </values>
        <values>
            <fullName>Pending Confirmation</fullName>
        </values>
        <values>
            <fullName>Pending Customer Input</fullName>
        </values>
        <values>
            <fullName>Redirected to Third Party</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Business Support</fullName>
        <description>Support Process used for Business Support Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open - Acknowledge</fullName>
        </values>
        <values>
            <fullName>Open - De-escalate</fullName>
        </values>
        <values>
            <fullName>Open - Escalate</fullName>
        </values>
        <values>
            <fullName>Open - Investigating</fullName>
        </values>
        <values>
            <fullName>Open - Pending Release</fullName>
        </values>
        <values>
            <fullName>Open - Reassigned</fullName>
        </values>
        <values>
            <fullName>Open - Repair</fullName>
        </values>
        <values>
            <fullName>Open - Troubleshooting</fullName>
        </values>
        <values>
            <fullName>Open - Web</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending - Weather</fullName>
        </values>
        <values>
            <fullName>Pending Confirmation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HSvc_DevEnggSupportProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Cancelled or Duplicate</fullName>
        </values>
        <values>
            <fullName>ENG - SPR Active</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Investigation Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Resolution</fullName>
        </values>
        <values>
            <fullName>Resolved or Completed</fullName>
        </values>
        <values>
            <fullName>SPF Released</fullName>
        </values>
        <values>
            <fullName>SPR Opened</fullName>
        </values>
        <values>
            <fullName>Troubleshooting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Install Work Order</fullName>
        <description>Support process having all Status values for Install Work Order cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Associate</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open - Dispatch</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Escalated</fullName>
        </values>
        <values>
            <fullName>Pending - Callback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Repair Work Order</fullName>
        <description>Support process having all Status values for Repair Work Order cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Associate</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open - Dispatch</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open - Escalated</fullName>
        </values>
        <values>
            <fullName>Pending - Callback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SA-Change</fullName>
        <description>Support Process for SA Change type of cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>Hold%E2%80%94Awaiting Information</fullName>
        </values>
        <values>
            <fullName>Hold-Awaiting Hardware</fullName>
        </values>
        <values>
            <fullName>Pending Acceptance</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Confirmation</fullName>
        </values>
        <values>
            <fullName>Resolved or Completed</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
        <values>
            <fullName>Upgrade Complete</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SA-Event</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled or Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Pending Resolution</fullName>
        </values>
        <values>
            <fullName>Resolved or Completed</fullName>
        </values>
        <values>
            <fullName>Troubleshooting</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountIsConsumer__c</fullName>
        <formula>Account.Is_Consumer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Is Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Address_Postal_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_HNS_BO_ID__c</fullName>
        <formula>IF( Account.Company_or_Location__c  == &apos;Location&apos; , Account.Parent.CRM_PS_Company_BO_ID__c ,  Account.CRM_PS_Company_BO_ID__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account HNS BO  ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Site_Type__c</fullName>
        <formula>TEXT(Account.Company_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Site Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street_Address__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Actual_Issue__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activate service</fullName>
                </value>
                <value>
                    <fullName>Adjustments not applied</fullName>
                </value>
                <value>
                    <fullName>Apply adjustments</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Back</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Considering</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Customer Education</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>De-install Equipment</fullName>
                </value>
                <value>
                    <fullName>Dispatch Tech</fullName>
                </value>
                <value>
                    <fullName>Educated Customer</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Escalated to Hughes</fullName>
                </value>
                <value>
                    <fullName>Escalated to SIC</fullName>
                </value>
                <value>
                    <fullName>Escalated to Supervisor</fullName>
                </value>
                <value>
                    <fullName>Give Courtesy Token(s)</fullName>
                </value>
                <value>
                    <fullName>Inform customer</fullName>
                </value>
                <value>
                    <fullName>Inform management Customer Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Inform management Field Service Hughes</fullName>
                </value>
                <value>
                    <fullName>Install - Escalate</fullName>
                </value>
                <value>
                    <fullName>Install - Updated</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Not located</fullName>
                </value>
                <value>
                    <fullName>Not Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_End_Date_Time__c</fullName>
        <label>Activity End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Internal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activity Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Start_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>System Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Note</fullName>
                </value>
                <value>
                    <fullName>Customer Note</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Escalation by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation Response</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>ARRIVAL</fullName>
                </value>
                <value>
                    <fullName>CLOSURE</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Issue__c</fullName>
        <label>Actual Issue</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Customer_Request_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Device Issue</fullName>
                </value>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Account Issue</fullName>
                </value>
                <value>
                    <fullName>Account Name (Misspelling)</fullName>
                </value>
                <value>
                    <fullName>Account Ownership Change</fullName>
                </value>
                <value>
                    <fullName>Activate new service</fullName>
                </value>
                <value>
                    <fullName>Agent Callback</fullName>
                </value>
                <value>
                    <fullName>Amount Due</fullName>
                </value>
                <value>
                    <fullName>API - FAP Token</fullName>
                </value>
                <value>
                    <fullName>API - Order</fullName>
                </value>
                <value>
                    <fullName>Application access issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue</fullName>
                </value>
                <value>
                    <fullName>Application Issue - Customer</fullName>
                </value>
                <value>
                    <fullName>Application Issue - hughes</fullName>
                </value>
                <value>
                    <fullName>Application Questions</fullName>
                </value>
                <value>
                    <fullName>Application Slow response times</fullName>
                </value>
                <value>
                    <fullName>Application System Error</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
                <value>
                    <fullName>Automated Call - Activation</fullName>
                </value>
                <value>
                    <fullName>Available schedule</fullName>
                </value>
                <value>
                    <fullName>Bad Cables/Wiring</fullName>
                </value>
                <value>
                    <fullName>Bad Modem</fullName>
                </value>
                <value>
                    <fullName>Bad Radio</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - CSR</fullName>
                </value>
                <value>
                    <fullName>Bad Treatment - Technical</fullName>
                </value>
                <value>
                    <fullName>Bad website</fullName>
                </value>
                <value>
                    <fullName>Bad website/url</fullName>
                </value>
                <value>
                    <fullName>Bank Strike</fullName>
                </value>
                <value>
                    <fullName>Bill Date</fullName>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Associated Ticket)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CP_RP_Date_Time__c</fullName>
        <formula>Parent.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RP_Date_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CP_Send_Outage_Notification_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check this checkbox to send planned outage notification</description>
        <label>Send Outage Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CUN_ID__c</fullName>
        <description>If the case is of type is not &quot;request&quot;.</description>
        <label>CUN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseRecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseRecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Case Internal Box is checked, it will not be visible to any external users.</inlineHelpText>
        <label>Case Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Owner:User.FirstName&amp; &quot; &quot;&amp;Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Re_assign__c</fullName>
        <label>Case Re-assign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Support_Tier__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
				<value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Frontline</fullName>
                </value>               
                <value>
                    <fullName>General Ops</fullName>
                </value>
                 <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate (HQ)</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes Distributor</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>SDG</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>
                <value>
                    <fullName>SP IT/Systems Admin</fullName>
                </value>
                <value>
                    <fullName>SP Technical Support Tier 1</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason_2__c</fullName>
        <label>Case Reason 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Business Support Case</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Awaiting SPR Code Release</fullName>
                </value>
                <value>
                    <fullName>Build Out Released</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete-Impact</fullName>
                </value>
                <value>
                    <fullName>Complete-No issues</fullName>
                </value>
                <value>
                    <fullName>Complete-Pending Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Director Approved</fullName>
                </value>
                <value>
                    <fullName>EMRB Approved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Failed QA</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold—Awaiting HW</fullName>
                </value>
                <value>
                    <fullName>Hold-Awaiting Information</fullName>
                </value>
                <value>
                    <fullName>Implementation Phase</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Investigation Open</fullName>
                </value>
                <value>
                    <fullName>MRB Approved</fullName>
                </value>
                <value>
                    <fullName>No Problem Found</fullName>
                </value>
                <value>
                    <fullName>Pending Acceptance</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Pending Resolution</fullName>
                </value>
                <value>
                    <fullName>Project Plan</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Rolled Back-Impact</fullName>
                </value>
                <value>
                    <fullName>Rolled Back-No Impact</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Subtype__c</fullName>
        <description>Dependent Picklist based on Case Type.</description>
        <inlineHelpText>Type of change, event, or task</inlineHelpText>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancel Core Service (Terminate)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Compliance with Regulator</fullName>
                </value>
                <value>
                    <fullName>De-Install (System)</fullName>
                </value>
                <value>
                    <fullName>Email Issue</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Equipment Recovery</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Hughes Truck Roll</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>Internet Performance</fullName>
                </value>
                <value>
                    <fullName>New Installation</fullName>
                </value>
                <value>
                    <fullName>Non-Technical</fullName>
                </value>
                <value>
                    <fullName>Outage</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Program</fullName>
                </value>
                <value>
                    <fullName>Partial Outage</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Regular Process</fullName>
                </value>
				<value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Relocation - Deinstall</fullName>
                </value>
                <value>
                    <fullName>Relocation - Reinstall</fullName>
                </value>
                <value>
                    <fullName>Repair Truckroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>